# crakv

./: Cargo.toml  Justfile
src/: echo.rs  main.rs  simple_kv.rs
store/: latest
store/echo/: latest
store/echo/20250309T213108.818-0400/: history.edn  history.txt  results.edn  test.jepsen  timeline.html
store/echo/20250309T213108.818-0400/net-journal/: 0.fressian  1.fressian  10.fressian  11.fressian  12.fressian  13.fressian  14.fressian  15.fressian  16.fressian  17.fressian  18.fressian  19.fressian  2.fressian  3.fressian  4.fressian  5.fressian  6.fressian  7.fressian  8.fressian  9.fressian
