[package]
name = "crakv"
version = "0.1.0"
edition = "2024"

[dependencies]
async-maelstrom = "0.1.2"
async-trait = "0.1.87"
color-eyre = "0.6.3"
derivative = "2.2.0"
eyre = "0.6.12"
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full", "tracing"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["json", "chrono", "env-filter"] }
